menu overlaps results fix

--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,7 @@ pre > code {
 
 .search__list {
 	position: absolute;
+  z-index: 1;
 	box-sizing: border-box;
 	width: 100%;
 	margin: 0;
